# cosmic-applet-notification

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  USER_GUIDE.md  flake.nix  justfile  nixos-module.nix  package.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: README.md  ci.yml  coverage.yml.disabled  nix-build.yml  rust-ci.yml.disabled
.github/workflows-disabled/: coverage.yml  release.yml  rust-ci.yml
data/: com.system76.CosmicAppletNotifications.desktop
docs/: ANIMATION_SYSTEM.md  KEYBOARD_SHORTCUTS.md  PERFORMANCE_OPTIMIZATIONS.md
docs/skills/: README.md  cosmic_best_practices_skill.md  libcosmic_applet_skill.md  nixos_rust_skill.md  notification_spec_skill.md  zbus_skill.md
examples/: README.md  accessibility-config.ron  default-config.ron  focus-mode-config.ron  minimal-config.ron  power-user-config.ron
scripts/: install-hooks.sh
src/: accessibility.rs  lib.rs  main.rs
src/config/: helper.rs  mod.rs
src/dbus/: listener.rs  mod.rs  sender.rs  types.rs
src/manager/: mod.rs  storage.rs
src/ui/: animation.rs  mod.rs  positioning.rs  theme.rs  url_parser.rs
src/ui/widgets/: filter_settings.rs  mod.rs  notification_card.rs  notification_list.rs  position_settings.rs
tests/: config_persistence.rs  dbus_integration.rs  manager_integration.rs  url_parser_integration.rs
